libft/gcc_errors.txt
src/ft_isalpha.c:17:28: error: expected expression
        if (c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z')
                                  ^
1 error generated.
src/ft_isascii.c:17:35: error: expected ')'
        return ((c >= 0 && c <= '~' + 1 )0);
                                         ^
src/ft_isascii.c:17:9: note: to match this '('
        return ((c >= 0 && c <= '~' + 1 )0);
               ^
1 error generated.
src/ft_itoa.c:27:9: error: implicit declaration of function 'ft_strjoin' is
      invalid in C99 [-Werror,-Wimplicit-function-declaration]
                str = ft_strjoin(str, ft_itoa(-n));
                      ^
src/ft_itoa.c:27:9: note: did you mean 'ft_strlen'?
src/libft.h:37:11: note: 'ft_strlen' declared here
size_t                          ft_strlen(const char *str);
                                ^
src/ft_itoa.c:27:7: error: incompatible integer to pointer conversion assigning
      to 'char *' from 'int' [-Werror,-Wint-conversion]
                str = ft_strjoin(str, ft_itoa(-n));
                    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/ft_itoa.c:30:7: error: incompatible integer to pointer conversion assigning
      to 'char *' from 'int' [-Werror,-Wint-conversion]
                str = ft_strjoin(ft_itoa(n / 10), ft_itoa(n % 10));
                    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3 errors generated.
src/ft_memcpy.c:15:7: error: conflicting types for 'ft_memcpy'
void    *ft_memcpy(void *restrict d, const void *restrict s, size_t n)
         ^
src/libft.h:67:8: note: previous declaration is here
void                    ft_memcpy(void *dst, const void *src, size_t n);
                        ^
src/ft_memcpy.c:25:14: error: assigning to 'unsigned char' from incompatible
      type 'const void'
                dst[count] = s[count];
                           ^ ~~~~~~~~
2 errors generated.
src/ft_memmove.c:15:7: error: conflicting types for 'ft_memmove'
void    *ft_memmove(void *dst, const void *src, size_t len)
         ^
src/libft.h:69:8: note: previous declaration is here
void                    ft_memmove(void *dst, const void *src, size_t len);
                        ^
1 error generated.
src/ft_putendl.c:17:12: error: passing 'const char *' to parameter of type
      'char *' discards qualifiers
      [-Werror,-Wincompatible-pointer-types-discards-qualifiers]
        ft_putstr(s);
                  ^
src/libft.h:64:24: note: passing argument to parameter 'str' here
void                    ft_putstr(char *str);
                                        ^
1 error generated.
src/ft_putendl_fd.c:17:15: error: passing 'const char *' to parameter of type
      'char *' discards qualifiers
      [-Werror,-Wincompatible-pointer-types-discards-qualifiers]
        ft_putstr_fd(s, fd);
                     ^
src/libft.h:63:27: note: passing argument to parameter 'str' here
void                    ft_putstr_fd(char *str, int fd);
                                           ^
1 error generated.
src/ft_striteri.c:15:6: error: conflicting types for 'ft_striteri'
void    ft_striteri(char *s, void (*f)(unsigned int, char *))
        ^
src/libft.h:58:8: note: previous declaration is here
void                    ft_striteri(char *s, void (*f)(char *));
                        ^
1 error generated.
src/ft_strjoin.c:27:23: error: passing 'const char *' to parameter of type
      'char *' discards qualifiers
      [-Werror,-Wincompatible-pointer-types-discards-qualifiers]
        ptr = ft_strcpy(ptr, s1);
                             ^~
src/libft.h:45:36: note: passing argument to parameter 'src' here
char                    *ft_strcpy(char *dst, char *src);
                                                    ^
1 error generated.
src/ft_strmapi.c:18:15: error: expected ';' at end of declaration
        char                    *fresh
                                      ^
                                      ;
src/ft_strmapi.c:26:22: error: unsequenced modification and access to 'i'
      [-Werror,-Wunsequenced]
                fresh[i] = f(i, s[i++]);
                      ~            ^
2 errors generated.
src/ft_strsplit.c:78:9: error: incompatible pointer to integer conversion
      returning 'char **' from a function with result type 'char'
      [-Werror,-Wint-conversion]
        return (arr);
               ^~~~~
src/ft_strsplit.c:90:27: error: expected ')'
                arr = make_array(arr, s c);
                                        ^
src/ft_strsplit.c:90:19: note: to match this '('
                arr = make_array(arr, s c);
                                ^
2 errors generated.
make: *** [libft.a] Error 1